--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ko.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ko.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "동영상과 사진을 모두 선택할 수 없습니다.";
 "Can not choose both photo and GIF" = "사진과 GIF를 모두 선택할 수 없습니다.";
 "Selected for %ld seconds" = "%ld 초 동안 선택됨";
+
+//Lit change
+"Allow access to more pictures" = "더 많은 사진에 대한 액세스 허용";
