--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Не можете да изберете видео и снимка";
 "Can not choose both photo and GIF" = "Не може да се избере снимка и GIF";
 "Selected for %ld seconds" = "Избрано за %ld секунди";
+
+//Lit change
+"Allow access to more pictures" = "Разрешете достъп до повече снимки";
