--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Nelze vybrat video ani fotografii";
 "Can not choose both photo and GIF" = "Nelze vybrat fotografie a GIF";
 "Selected for %ld seconds" = "Vybráno na %ld sekund";
+
+//Lit change
+"Allow access to more pictures" = "Povolit přístup k dalším obrázkům";
