--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "לא ניתן לבחור הן בסרטון והן בתמונה";
 "Can not choose both photo and GIF" = "לא ניתן לבחור גם תמונה וגם קובץ GIF";
 "Selected for %ld seconds" = "נבחר למשך %ld שניות";
+
+//Lit change
+"Allow access to more pictures" = "אפשר גישה לתמונות נוספות";
