--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Non è possibile scegliere sia video che foto";
 "Can not choose both photo and GIF" = "Non è possibile scegliere sia foto che GIF";
 "Selected for %ld seconds" = "Selezionato per %ld secondi";
+
+//Lit change
+"Allow access to more pictures" = "Consenti l'accesso a più immagini";
