--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Kan niet zowel video als foto kiezen";
 "Can not choose both photo and GIF" = "Kan niet zowel foto als GIF kiezen";
 "Selected for %ld seconds" = "Geselecteerd voor %ld seconden";
+
+//Lit change
+"Allow access to more pictures" = "Toegang tot meer foto's toestaan";
