--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Nie można wybrać zarówno wideo,jak i zdjęcia";
 "Can not choose both photo and GIF" = "Nie można wybrać zarówno zdjęcia,jak i GIF";
 "Selected for %ld seconds" = "Wybrany przez %ld sekund";
+
+//Lit change
+"Allow access to more pictures" = "Zezwól na dostęp do większej liczby zdjęć";
