--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Nu puteți alege atât videoclipul,cât și fotografia";
 "Can not choose both photo and GIF" = "Nu puteți alege atât fotografia,cât și GIF";
 "Selected for %ld seconds" = "Selectat pentru %ld secunde";
+
+//Lit change
+"Allow access to more pictures" = "Permite accesul la mai multe imagini";
