--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Nie je možné vybrať video aj fotografiu";
 "Can not choose both photo and GIF" = "Nie je možné vybrať fotografie a obrázky GIF";
 "Selected for %ld seconds" = "Vybraté na %ld sekundy";
+
+//Lit change
+"Allow access to more pictures" = "Povoliť prístup k ďalším obrázkom";
