--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Kan inte välja både video och foto";
 "Can not choose both photo and GIF" = "Kan inte välja både foto och GIF";
 "Selected for %ld seconds" = "Vald för %ld sekunder";
+
+//Lit change
+"Allow access to more pictures" = "Tillåt åtkomst till fler bilder";
