--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Hem video hem de fotoğraf seçilemiyor";
 "Can not choose both photo and GIF" = "Hem fotoğraf hem de GIF seçilemiyor";
 "Selected for %ld seconds" = "%ld saniye için seçildi";
+
+//Lit change
+"Allow access to more pictures" = "Daha fazla resme erişime izin ver";
