--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
@@ -18,3 +18,6 @@
 "Can not choose both video and photo" = "Неможливо вибрати як відео,так і фото";
 "Can not choose both photo and GIF" = "Неможливо вибрати як фото,так і GIF";
 "Selected for %ld seconds" = "Đã chọn cho %ld giây";
+
+//Lit change
+"Allow access to more pictures" = "Надайте доступ до інших зображень";
