修复本地化格式错误

--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "OK"                      = "ठीक है";
 "Back"                    = "पीछे";
 "Done"                    = "किया हुआ";
-"Edit"                    = "संपादित करें"
+"Edit"                    = "संपादित करें";
 "Sorry"                   = "माफ़ करना";
 "Cancel"                  = "रद्द करें";
 "Setting"                 = "स्थापना";
