--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "OK"                      = "Oke";
 "Back"                    = "Kembali";
 "Done"                    = "Selesai";
-"Edit"                    = "Sunting"
+"Edit"                    = "Sunting";
 "Sorry"                   = "Maaf";
 "Cancel"                  = "Membatalkan";
 "Setting"                 = "Pengaturan";
