加入了全选功能

--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ar.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ar.lproj/Localizable.strings
@@ -27,3 +27,6 @@
 
 //Lit change
 "Allow access to more pictures" = "السماح بالوصول إلى المزيد من الصور";
+"Select all" = "اختر الكل";
+"Unselect all" = "إلغاء تحديد الكل";
+
