--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Разрешете достъп до повече снимки";
+"Select all" = "Маркирай всичко";
+"Unselect all" = "Деселектирайте всички";
