--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Povolit přístup k dalším obrázkům";
+"Select all" = "Vybrat vše";
+"Unselect all" = "Odznačit vše";
