--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/de.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/de.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Zugriff auf weitere Bilder zulassen";
+"Select all" = "Wählen Sie Alle";
+"Unselect all" = "Alles wiederufen";
