--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/el.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/el.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Επιτρέψτε την πρόσβαση σε περισσότερες φωτογραφίες";
+"Select all" = "Επιλογή όλων";
+"Unselect all" = "Κατάργηση επιλογής όλων";
