--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/es.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/es.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Permitir el acceso a más imágenes";
+"Select all" = "Seleccionar todo";
+"Unselect all" = "Deselecciona todo";
