--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "אפשר גישה לתמונות נוספות";
+"Select all" = "בחר הכל";
+"Unselect all" = "בטל את הבחירה בכולם";
