--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Izinkan akses ke lebih banyak gambar";
+"Select all" = "Pilih Semua";
+"Unselect all" = "Batalkan pilihan semua";
