--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Consenti l'accesso a più immagini";
+"Select all" = "Seleziona tutto";
+"Unselect all" = "Deseleziona tutto";
