--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Toegang tot meer foto's toestaan";
+"Select all" = "Selecteer alles";
+"Unselect all" = "Alles deselecteren";
