--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Permite accesul la mai multe imagini";
+"Select all" = "Selectează tot";
+"Unselect all" = "Deselectează tot";
