--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ru.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ru.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Разрешить доступ к большему количеству изображений";
+"Select all" = "Выбрать все";
+"Unselect all" = "Снять все";
