--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Povoliť prístup k ďalším obrázkom";
+"Select all" = "Vybrať všetko";
+"Unselect all" = "Odznačiť všetko";
