--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Tillåt åtkomst till fler bilder";
+"Select all" = "Välj alla";
+"Unselect all" = "Avmarkera alla";
