--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/th.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/th.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "อนุญาตให้เข้าถึงรูปภาพเพิ่มเติม";
+"Select all" = "เลือกทั้งหมด";
+"Unselect all" = "ไม่เลือกทั้งหมด";
