--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Daha fazla resme erişime izin ver";
+"Select all" = "Hepsini seç";
+"Unselect all" = "Tümünün seçimini kaldır";
