--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Надайте доступ до інших зображень";
+"Select all" = "Вибрати все";
+"Unselect all" = "Скасувати вибір усіх";
