--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/vi.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/vi.lproj/Localizable.strings
@@ -28,3 +28,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Cho phép truy cập vào nhiều hình ảnh hơn";
+"Select all" = "Chọn tất cả";
+"Unselect all" = "Bỏ chọn tất cả";
