--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/fr.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/fr.lproj/Localizable.strings
@@ -27,3 +27,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Autoriser l'accès à plus de photos";
+"Select all" = "Tout sélectionner";
+"Unselect all" = "Tout déselectionner";
