--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
@@ -27,6 +27,8 @@
 
 //Lit change
 "Allow access to more pictures" = "अधिक चित्रों तक पहुंच की अनुमति दें";
+"Select all" = "सबका चयन करें";
+"Unselect all" = "सभी का चयन रद्द";
 
 
 
