--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
@@ -21,3 +21,5 @@
 
 //Lit change
 "Allow access to more pictures" = "Zezwól na dostęp do większej liczby zdjęć";
+"Select all" = "Zaznacz wszystko";
+"Unselect all" = "Odznacz wszystko";
