修改返回文案

--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/de.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/de.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "Zugriff auf weitere Bilder zulassen";
 "Select all" = "Wählen Sie Alle";
 "Unselect all" = "Alles wiederufen";
+"Select album" = "Album auswählen";
