--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/el.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/el.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Επιτρέψτε την πρόσβαση σε περισσότερες φωτογραφίες";
 "Select all" = "Επιλογή όλων";
 "Unselect all" = "Κατάργηση επιλογής όλων";
+"Select album" = "Επιλέξτε άλμπουμ";
