--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/es.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/es.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "Permitir el acceso a más imágenes";
 "Select all" = "Seleccionar todo";
 "Unselect all" = "Deselecciona todo";
+"Select album" = "Seleccionar álbum";
