--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/fr.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/fr.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "Autoriser l'accès à plus de photos";
 "Select all" = "Tout sélectionner";
 "Unselect all" = "Tout déselectionner";
+"Select album" = "Sélectionner l'album";
