--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/he.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "אפשר גישה לתמונות נוספות";
 "Select all" = "בחר הכל";
 "Unselect all" = "בטל את הבחירה בכולם";
+"Select album" = "בחר אלבום";
