--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/hi.lproj/Localizable.strings
@@ -29,6 +29,7 @@
 "Allow access to more pictures" = "अधिक चित्रों तक पहुंच की अनुमति दें";
 "Select all" = "सबका चयन करें";
 "Unselect all" = "सभी का चयन रद्द";
+"Select album" = "एल्बम चुनें";
 
 
 
