--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/it.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Consenti l'accesso a più immagini";
 "Select all" = "Seleziona tutto";
 "Unselect all" = "Deseleziona tutto";
+"Select album" = "Seleziona l'album";
