--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ja.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ja.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "より多くの写真へのアクセスを許可する";
 "Select all" = "すべて選択";
 "Unselect all" = "すべて選択解除";
+"Select album" = "アルバムを選択";
