--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ko.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ko.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "더 많은 사진에 대한 액세스 허용";
 "Select all" = "모두 선택";
 "Unselect all" = "모두 선택 해제";
+"Select album" = "앨범 선택";
