--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pt.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pt.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "Permitir acesso a mais fotos";
 "Select all" = "Selecionar tudo";
 "Unselect all" = "Desmarque todos";
+"Select album" = "Selecionar álbum";
