--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ro.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Permite accesul la mai multe imagini";
 "Select all" = "Selectează tot";
 "Unselect all" = "Deselectează tot";
+"Select album" = "Selectați albumul";
