--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sk.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Povoliť prístup k ďalším obrázkom";
 "Select all" = "Vybrať všetko";
 "Unselect all" = "Odznačiť všetko";
+"Select album" = "Vyberte album";
