--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/sv.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Tillåt åtkomst till fler bilder";
 "Select all" = "Välj alla";
 "Unselect all" = "Avmarkera alla";
+"Select album" = "Välj album";
