--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/th.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/th.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "อนุญาตให้เข้าถึงรูปภาพเพิ่มเติม";
 "Select all" = "เลือกทั้งหมด";
 "Unselect all" = "ไม่เลือกทั้งหมด";
+"Select album" = "เลือกอัลบั้ม";
