--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/vi.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/vi.lproj/Localizable.strings
@@ -30,3 +30,4 @@
 "Allow access to more pictures" = "Cho phép truy cập vào nhiều hình ảnh hơn";
 "Select all" = "Chọn tất cả";
 "Unselect all" = "Bỏ chọn tất cả";
+"Select album" = "Chọn album";
