--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ar.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/ar.lproj/Localizable.strings
@@ -29,4 +29,4 @@
 "Allow access to more pictures" = "السماح بالوصول إلى المزيد من الصور";
 "Select all" = "اختر الكل";
 "Unselect all" = "إلغاء تحديد الكل";
-
+"Select album" = "حدد الألبوم";
