--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/bg.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Разрешете достъп до повече снимки";
 "Select all" = "Маркирай всичко";
 "Unselect all" = "Деселектирайте всички";
+"Select album" = "Изберете албум";
