--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/cs-CZ.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Povolit přístup k dalším obrázkům";
 "Select all" = "Vybrat vše";
 "Unselect all" = "Odznačit vše";
+"Select album" = "Vyberte album";
