--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/id.lproj/Localizable.strings
@@ -29,3 +29,4 @@
 "Allow access to more pictures" = "Izinkan akses ke lebih banyak gambar";
 "Select all" = "Pilih Semua";
 "Unselect all" = "Batalkan pilihan semua";
+"Select album" = "Pilih album";
