--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/nl.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Toegang tot meer foto's toestaan";
 "Select all" = "Selecteer alles";
 "Unselect all" = "Alles deselecteren";
+"Select album" = "Selecteer album";
