--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/pl.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Zezwól na dostęp do większej liczby zdjęć";
 "Select all" = "Zaznacz wszystko";
 "Unselect all" = "Odznacz wszystko";
+"Select album" = "Wybierz album";
