--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/tr.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Daha fazla resme erişime izin ver";
 "Select all" = "Hepsini seç";
 "Unselect all" = "Tümünün seçimini kaldır";
+"Select album" = "Albüm seç";
