--- a/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
+++ b/TZImagePickerController/TZImagePickerController/TZImagePickerController.bundle/uk.lproj/Localizable.strings
@@ -23,3 +23,4 @@
 "Allow access to more pictures" = "Надайте доступ до інших зображень";
 "Select all" = "Вибрати все";
 "Unselect all" = "Скасувати вибір усіх";
+"Select album" = "Виберіть альбом";
